pwang16/mp3/grade_report_extra_credit.txt
Monad Autograder
Testing mp3.1 at 2014-09-27 11:52:23

"A lot of the things that I say are true, but I don't actually mean them." ~ Alexey Stepanov

Setting up test environment...
Compiling...
================================================================
In file included from unit_tests.cpp:38:
In file included from ./list.h:300:
./list.cpp:111:1: error: expected expression
}
^
In file included from unit_tests.cpp:38:
In file included from ./list.h:304:
./list_given.cpp:16:21: warning: implicit conversion of NULL constant to 'int' [-Wnull-conversion]
        : head(NULL), tail(NULL), length(0)
                      ~~~~ ^~~~
                           0
./list_given.cpp:16:37: error: expected ';' at end of declaration
        : head(NULL), tail(NULL), length(0)
                                           ^
                                           ;
unit_tests.cpp:45:1: error: expected expression
template<class A, class B, class C>
^
unit_tests.cpp:73:1: error: no template named 'triple'; did you mean 'tuple'?
triple<bool, bool, bool> checkList(List<int> const & list, vector<int> const & vect, check_t whichcheck)
^~~~~~
tuple
/class/cs225/llvm/include/c++/v1/tuple:486:29: note: 'tuple' declared here
class _LIBCPP_TYPE_VIS_ONLY tuple
                            ^
unit_tests.cpp:74:1: error: function definition is not allowed here
{
^
unit_tests.cpp:387:112: error: expected ';' at end of declaration
VALGRIND_TEST(testWaterfall7_empty,             5,      3,      10000)  {       testWaterfall4(CHECK_ALL); testWaterfallEmpty(CHECK_ALL); }
                                                                                                                                           ^
                                                                                                                                           ;
unit_tests.cpp:539:21: error: expected '}'
#endif // MP_PART(2)
                    ^
./list.cpp:109:1: note: to match this '{'
{
^
1 warning and 7 errors generated.
In file included from unit_tests.cpp:38:
In file included from ./list.h:300:
./list.cpp:111:1: error: expected expression
}
^
In file included from unit_tests.cpp:38:
In file included from ./list.h:304:
./list_given.cpp:16:21: warning: implicit conversion of NULL constant to 'int' [-Wnull-conversion]
        : head(NULL), tail(NULL), length(0)
                      ~~~~ ^~~~
                           0
./list_given.cpp:16:37: error: expected ';' at end of declaration
        : head(NULL), tail(NULL), length(0)
                                           ^
                                           ;
unit_tests.cpp:45:1: error: expected expression
template<class A, class B, class C>
^
unit_tests.cpp:73:1: error: no template named 'triple'; did you mean 'tuple'?
triple<bool, bool, bool> checkList(List<int> const & list, vector<int> const & vect, check_t whichcheck)
^~~~~~
tuple
/class/cs225/llvm/include/c++/v1/tuple:486:29: note: 'tuple' declared here
class _LIBCPP_TYPE_VIS_ONLY tuple
                            ^
unit_tests.cpp:74:1: error: function definition is not allowed here
{
^
unit_tests.cpp:387:112: error: expected ';' at end of declaration
VALGRIND_TEST(testWaterfall7_empty,             5,      3,      10000)  {       testWaterfall4(CHECK_ALL); testWaterfallEmpty(CHECK_ALL); }
                                                                                                                                           ^
                                                                                                                                           ;
unit_tests.cpp:539:21: error: expected '}'
#endif // MP_PART(2)
                    ^
./list.cpp:109:1: note: to match this '{'
{
^
1 warning and 7 errors generated.
ld: no input files
clang-3.4: error: no such file or directory: 'unit_tests.o'
make: *** [proxy] Error 1


Running tests...
================================================================
Could not execute test cases


Total score...
================================================================
TOTAL SCORE: 0

